--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -2,38 +2,324 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body {
-    background-color: mediumaquamarine;
+    background-color: #48bf91;
 }
 
-.start-btn,
-.quiz-info {
+.start-btn, .quiz-info, .quiz, .quiz-results {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2),
+                          0px 6px 20px rgba(0, 0, 0, 0.19);
 }
 
 .quiz-info {
-    width: 700px;
-    background-color: white;
+    width: 540px;
+    background-color: #fff;
     border-radius: 5px;
-    border: 2px solid gray;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
 
-.start-btn button {
-    font-size: 25px;
-    font-weight: 500;
-    background-color: white;
-    color: blue;
-    padding: 15px 30px;
-    outline: none;
-    border: none;
+
+.quiz-info .info-title {
+    display: flex;
+    height: 60px;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 0 35px;
+    border-bottom: 1px solid #3b3b38;
+    align-items: center;
+}
+
+.quiz-info .rules-list {
+    padding: 15px 35px;
+}
+
+.quiz-info .rules-list .rule {
+    margin: 5px 0;
+    font-size: 16px;
+}
+
+.quiz-info .rules-list span {
+    font-weight: 600;
+    color: #ff160c;
+}
+.quiz-info .buttons {
+    display: flex;
+    height: 55px;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 40px;
+    border-top: 1px solid #3b3b38;
+}
+
+.quiz-info .buttons button {
+    margin: 0 5px;
+    height: 35px;
+    width: 400px;
     border-radius: 10px;
+    border: 1px solid #3b3b38;
+    transition: all 0.3s ease;
     cursor: pointer;
 }
 
- 
+.quiz {
+    width: 600px;
+    background-color: #fff;
+    border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
+.quiz header {
+    display: flex;
+    height: 70px;
+    padding: 0 25px;
+    position: relative;
+    z-index: 99;
+    background-color: #fff;
+    border-radius: 5px 5px 0 0;
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.1);
+    align-items: center;
+    justify-content: space-between;
+}
+
+.quiz header .quiz-title {
+    font-weight: 500;
+    font-size: 22px;
+}
+.quiz header .timer {
+    display: flex;
+    height: 50px;
+    width: 130px;
+    font-size: 20px;
+    font-weight: 400;
+    background-color: #dcdcdc;
+    border: 1px solid #3b3b38;
+    border-radius: 5px;
+    padding: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.quiz header .timer .timer-txt {
+    font-size: 18px;
+    font-weight: 300;
+    user-select: none;
+}
+
+.quiz header .timer .timer-secs {
+    width: 40px;
+    font-size: 22px;
+    background-color: #fff;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 5px;
+    border: 1px solid #3b3b38;
+    user-select: none;
+}
+
+.quiz section {
+    padding: 25px 30px 20px 30px;
+    background-color: #fff;
+}
+
+.quiz section .quiz-questions {
+    font-size: 28px;
+    font-weight: 400;
+}
+
+.quiz section .answer-list {
+    padding: 20px 0;
+    display: block;
+}
+
+section .answer-list .answer {
+    display: flex;
+    background-color: rgba(220, 220, 220, 0.4);
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
+    padding: 8px 15px;
+    margin-bottom: 15px;
+    font-size: 16px;
+    align-items: center;
+    justify-content: space-between;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.answer-list .answer:last-child {
+    margin-bottom: 0px;
+}
+
+.answer-list .answer .icon {
+    height: 22px;
+    width: 22px;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    font-size: 12px;
+    text-align: center;
+    line-height: 18px;
+    pointer-events: none;
+}
+
+.answer-list .answer .icon.incorrect {
+    background-color:rgb(255, 22, 12, 0.1) ;
+    border-color: #ff160c;
+    color: #ff160c;
+}
+
+.answer-list .answer .icon.correct {
+    background-color: rgba(51, 165, 50, 0.1);
+    border-color: #33a532;
+    color: #33a532;
+}
+
+section .answer-list .answer:hover {
+    background-color: #fff;
+    border-color: #0000bb;
+    color: #1f51ff;
+}
+
+.quiz footer {
+    display: flex;
+    height: 50px;
+    width: 100%;
+    padding: 0 30px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.quiz footer .total-questions span {
+    display: flex;
+    user-select: none;
+}
+
+.total-questions span p {
+    font-weight: 400;
+    padding: 0 5px;
+}
+
+.total-questions span p:first-child {
+    padding-left: 0px;
+}
+
+footer .next {
+    height: 40px;
+    width: 70px;
+    padding: 0 14px;
+    font-size: 18px;
+    font-weight: 400;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #3b3b38;
+    background-color: #dcdcdc;
+    color: #1f51ff;
+    cursor: pointer;
+}
+
+footer .next:hover {
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
+    background-color: #fff;
+    border-color: #0000bb;
+    color: #1f51ff;
+}
+.start-btn button {
+    font-size: 20px;
+    font-weight: 300;
+    background-color: #fff;
+    color: 	#0000ff;
+    padding: 10px 20px;
+    border-radius: 10px ;
+    outline: none;
+    border: none;
+}
+.quiz-info, .quiz-results .buttons .exit {
+    background-color: #dcdcdc;
+    color: #ff160c;
+}
+
+.quiz-info, .quiz-results .buttons .exit:hover {
+    background-color: #fff;
+}
+
+.quiz-info, .quiz-results .buttons .restart {
+    background-color: #dcdcdc;
+    color: #1f51ff;
+}
+.quiz-info, .quiz-results .buttons .restart:hover{
+    background-color: #fff;
+}
+
+.quiz-results {
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    width: 400px;
+    background-color: #fff;
+    padding: 25px 30px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
+.quiz-results .finished-text {
+    font-size: 24px;
+    font-weight: 700;
+    color: #1f51ff;
+}
+
+
+.quiz-results .icon {
+    font-size: 60px;
+    margin: 15px 0 5px 0;
+    color: #d4af37;
+}
+
+.quiz-results .buttons {
+    display: flex;
+    margin: 20px 0;
+}
+
+.quiz-results .buttons button {
+    height: 50px;
+    margin: 0 10px;
+    padding: 0 20px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    border: 1px solid #3b3b38;
+    font-size: 16px;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.quiz-results .result-text span {
+    display: flex;
+    font-size: 24px;
+    margin: 10px 0;
+    font-weight: 400;
+}
+
+.result-text span p {
+    font-weight: 600;
+    padding: 0 4px;
+}
